--- a/backend-ai-receptionist/Gemfile
+++ b/backend-ai-receptionist/Gemfile
@@ -42,6 +42,8 @@ gem "nokogiri", "~> 1.15" # For HTML/XML parsing and content extraction
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin Ajax possible
 gem "rack-cors"
 
+gem 'faye-websocket'
+
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri windows ], require: "debug/prelude"
